System Bookmark doesn't display files with accents #44533

Closed
opened 2015-04-28 11:39:10 +02:00 by filip mond · 14 comments

System Information
OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: 2.74 bf11f36

Short description of error
System Bookmark doesn't display files with names using accents like ěščřžýáíé.
Even "Bookmark" or file browser list display these files without any problems.

Thank you for help

**System Information** OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: 2.74 bf11f36 **Short description of error** System Bookmark doesn't display files with names using accents like ěščřžýáíé. Even "Bookmark" or file browser list display these files without any problems. Thank you for help
Author

Changed status to: 'Open'

Changed status to: 'Open'
jens verwiebe was assigned by filip mond 2015-04-28 11:39:10 +02:00
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond

Added subscriber: @Sergey

Added subscriber: @Sergey

Does changing DPI in User Preferences -> System makes any difference?

Does changing DPI in User Preferences -> System makes any difference?
Member

I checked here with german umlauts öäü and åœ etc.
Works fine.
Could it be it is simply forgotten in your translation set ?

Jens

I checked here with german umlauts öäü and åœ etc. Works fine. Could it be it is simply forgotten in your translation set ? Jens

Added subscriber: @mont29

Added subscriber: @mont29
Author

@Sergey and jensverwiebe:
As I wrote in description: I can see items that their name consist from accents letters. File Browser's list or user's "Bookmark" (that is window just bellow) displaies these files. How DPI or incomplete translation set can be the problem?

So just to try answer: I changed DPI - zero difference and to "translation set" … how can I check it … what it is? Do you mean translation of interface items? Because I speak about names of items in a bookmark list not about "Region Text Title".

Simply I can see czech accents everywhere cross blender!s UI, except "System Bookmark" list (field) which ignores (or has problem to display) items that includes letters with accent in item's name.

Since "System Bookmark" is generated from OS X "Favorites" seems like problem possibly comes from this direction?

Thank you for help

Screen-Shot-2015-04-29-at-17.20.jpg

@Sergey and jensverwiebe: As I wrote in description: I can see items that their name consist from accents letters. File Browser's list or user's "Bookmark" (that is window just bellow) displaies these files. How DPI or incomplete translation set can be the problem? So just to try answer: I changed DPI - zero difference and to "translation set" … how can I check it … what it is? Do you mean translation of interface items? Because I speak about names of items in a bookmark list not about "Region Text Title". Simply I can see czech accents everywhere cross blender!s UI, except "System Bookmark" list (field) which ignores (or has problem to display) items that includes letters with accent in item's name. Since "System Bookmark" is generated from OS X "Favorites" seems like problem possibly comes from this direction? Thank you for help ![Screen-Shot-2015-04-29-at-17.20.jpg](https://archive.blender.org/developer/F168002/Screen-Shot-2015-04-29-at-17.20.jpg)
Member

Now i first time understand what you mean :-)
Have to find a way to reproduce this.

The code affected is in fsmenu.c btw.

More to come .... Jens

Now i first time understand what you mean :-) Have to find a way to reproduce this. The code affected is in fsmenu.c btw. More to come .... Jens
Member

Confirm dir named "öäü" also not showing up !
Trying to fix now....

Jens

Confirm dir named "öäü" also not showing up ! Trying to fix now.... Jens

This issue was referenced by ce32aae80c

This issue was referenced by ce32aae80c5c00ec33a86528a93809c66f819c5c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit ce32aae80c.

Closed by commit ce32aae80c.
Author

Thanky ou very much for such a quick response and fix :)

(And sorry if I wasn't clear at first post, I didn't know how to describe it better.)

Thanky ou very much for such a quick response and fix :) (And sorry if I wasn't clear at first post, I didn't know how to describe it better.)
Member

Filip, you described it good enough.
I was just too tired to get it first time just reading ( late night pebkac )
The screenshot opened my eyes :-)

All fine, thanks for the report

Yours ... Jens

Filip, you described it good enough. I was just too tired to get it first time just reading ( late night pebkac ) The screenshot opened my eyes :-) All fine, thanks for the report Yours ... Jens
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44533
No description provided.