OSX: fix T44533, system_bookmarks not showing utf standard ( umlauts etc. )